--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
+    <p>Can you see this?</p>
     <div class="container">
         <div id="home" class="flex-center flex-column">
             <h1>Quick Quiz</h1>
