--- a/game.html
+++ b/game.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Quiz - Play</title>
+    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     <div class="container">
