--- a/game.html
+++ b/game.html
@@ -11,6 +11,22 @@
     <div class="container">
         <div id="game" class="justify-center flex-column">
             <h2 id="question">What is the answer to this questions?</h2>
+            <div class="choice-container">
+                <p class="choice-prefix">A</p>
+                <p class="choice-text">Choice 1</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-prefix">B</p>
+                <p class="choice-text">Choice 2</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-prefix">C</p>
+                <p class="choice-text">Choice 3</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-prefix">D</p>
+                <p class="choice-text">Choice 4</p>
+            </div>
         </div>
     </div>
 </body>
