creating a progress bar

--- a/game.html
+++ b/game.html
@@ -13,10 +13,14 @@
             <!-- To display heads up display (HUD) -->
             <div id="hud">
                 <div id="hud-item">
-                    <p class="hud-prefix">
+                    <p id="progressText" class="hud-prefix">
                         Question
                     </p>
-                    <h1 class="hud-main-text" id="questionCounter">
+                    <div id="progressBar">
+                        <div id="progressBarFull">
+
+                        </div>
+                    </div>
                     </h1>
                 </div>
                 <div id="hud-item">
