High scores list display

--- a/highscores.html
+++ b/highscores.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <div id="highSCores" class="flex-center flex-column">
-            <h1 id="finalScore">High Scores</h1>
-            <ul id="highScoreList"></ul>
+        <div id="highScores" class="flex-center flex-column">
+            <h1 id="finalScores">High Scores</h1>
+            <ul id="highScoresList"></ul>
             <a href="/" class="btn">Go Home</a>
         </div>
     </div>
